Fix "Ask AI" button in dark mode
The "Ask AI" button in dark mode is blue and the text disappears on hover. This CSS change fixes that.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -800,7 +800,7 @@ html[data-theme="dark"] .notification-dropdown {
   align-items: center;
   background-color: var(--ifm-color-primary);
   border: 2px solid var(--ifm-color-primary);
-  border-radius: var(--ifm-global-radius);
+  border-radius: 2px;
   box-shadow: none;
   color: white;
   cursor: pointer;
@@ -811,7 +811,6 @@ html[data-theme="dark"] .notification-dropdown {
   margin-left: 0.75rem;
   outline: none;
   padding: 0.25rem 0.5rem;
-  text-decoration: none !important;
   transition: 0.15s all ease-in-out;
 }
 
@@ -829,7 +828,7 @@ html[data-theme="dark"] .notification-dropdown {
   border: 2px solid var(--ifm-color-primary);
   color: var(--ifm-color-primary);
   background-color: white;
-  border-radius: 4px;
+  border-radius: 2px;
   padding: 0.5rem 0 0.5rem 0;
   width: 100px;
   font-weight: 550;
@@ -850,6 +849,12 @@ html[data-theme="dark"] .notification-dropdown {
   .ask-ai-button {
     display: none !important;
   }
+}
+
+html[data-theme='dark'] .ask-ai-button {
+  background-color: var(--ifm-background-color);
+  color: white;
+  border-color: var(--ifm-color-primary);
 }
 
 html[data-theme='dark'] .ask-ai-button:hover,
